--- a/.github/workflows/beam-deploy.yml
+++ b/.github/workflows/beam-deploy.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Upload Model Weights
         # Path changed to match download location above
-        run: beam storage upload server/models/sam2.1_hiera_large.pt model-weights/
+        run: beam volume upload server/models/sam2.1_hiera_large.pt model-weights/
 
       - name: Deploy to Beam
         working-directory: ./server
