--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,18 +2,18 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Install system dependencies first (needed for some Python packages)
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     build-essential \
     libgl1 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements first to leverage Docker cache
-COPY server/requirements.txt .
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the application
-COPY server/ .
+# Copy the rest of the application (all files in the server folder)
+COPY . .
 
 # Create uploads directory
 RUN mkdir -p uploads
