--- a/.github/workflows/beam-deploy.yml
+++ b/.github/workflows/beam-deploy.yml
@@ -45,4 +45,4 @@ jobs:
 
       - name: Deploy to Beam
         working-directory: ./server
-        run: beam deploy main.py:app
+        run: beam deploy app.py:web_server
