--- a/.github/workflows/beam-deploy.yml
+++ b/.github/workflows/beam-deploy.yml
@@ -30,6 +30,9 @@ jobs:
           
       - name: download requirements.txt
         run: pip install -r server/requirements.txt
+         
+      - name: download python-multipartt
+        run: pip install python-multipart
         
       - name: install sam2
         run: pip install sam2
