--- a/.github/workflows/beam-deploy.yml
+++ b/.github/workflows/beam-deploy.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: '3.10'
       
       - name: Install Beam CLI
-        run: pip install beam-client beam-sdk hydra-core tqdm python-multipart
+        run: pip install beam-client beam-sdk hydra-core tqdm
       
       - name: Create models directory
         run: mkdir -p server/models
@@ -32,7 +32,7 @@ jobs:
         run: pip install -r server/requirements.txt
          
       - name: download python-multipart
-        run: pip install python-multipart==0.0.14
+        run: pip install python-multipart==0.0.12
         
       - name: install sam2
         run: pip install sam2
